# waitingroom

./: .gitignore  Cargo.toml  log.txt  readme.md  restart_nodes.sh  start_network.sh  start_node.sh
kendall-tau/: Cargo.toml
kendall-tau/src/: lib.rs
little-raft/: README.md
waitingroom-basic/: Cargo.toml
waitingroom-basic/src/: lib.rs  metrics.rs  settings.rs
waitingroom-core/: Cargo.toml
waitingroom-core/src/: error.rs  lib.rs  metrics.rs  network.rs  pass.rs  random.rs  settings.rs  ticket.rs  time.rs
waitingroom-distributed/: Cargo.toml
waitingroom-distributed/src/: lib.rs  messages.rs  test.rs  weight_table.rs
waitingroom-distributed/src/distributed/: count.rs  fault_detection.rs  membership_changes.rs  mod.rs  qpid.rs  test.rs  testing.rs
waitingroom-http/: Cargo.toml  sample_config.yaml
waitingroom-http-tool/: Cargo.toml
waitingroom-http-tool/src/: app.rs  handler.rs  lib.rs  main.rs  task.rs  ui.rs
waitingroom-http/src/: demo_server.rs  http_network.rs  interface.rs  main.rs  settings.rs  timers.rs  waiting_room.rs
waitingroom-local-queue/: Cargo.toml
waitingroom-local-queue/src/: lib.rs
waitingroom-playground/: Cargo.toml  logs.txt
waitingroom-playground/src/: main.rs
waitingroom-spanning-trees/: Cargo.toml
waitingroom-spanning-trees/src/: lib.rs
waitingroom-stresser/: Cargo.toml
waitingroom-stresser/src/: main.rs
waitingroom-testing/: Cargo.toml  generate_outputs.sh  generate_plots.py  out.csv
waitingroom-testing/configs/: 1_200_2000.json  2_200_500.json  3_20_2000.json  4_100_2000.json  5_100_1000.json  c1_1000_no.json  c2_500_no.json  c3_250_no.json  c4_100_no.json  c5_50_no.json  c6_20_no.json  d1_1000_2000.json  d2_500_2000.json  d3_250_2000.json  d4_100_2000.json  d5_50_2000.json  d6_20_2000.json  l1_1000_no.json  l2_500_no.json  l3_250_no.json  l4_100_no.json  l5_50_no.json  l6_20_no.json  t1_1000_2000.json  t2_500_2000.json  t3_250_2000.json  t5_50_2000.json
waitingroom-testing/out_logs/: 1_200_2000.csv  2_200_500.csv  3_20_2000.csv  4_100_2000.csv  5_100_1000.csv  c1_1000_no.csv  c2_500_no.csv  c3_250_no.csv  c4_100_no.csv  c5_50_no.csv  d6_20_2000.csv  l1_1000_no.csv  t2_500_2000.csv  t3_250_2000.csv  t5_50_2000.csv
waitingroom-testing/results/: target_100_total_100_killed_5.jsonl  target_100_total_2500_killed_1.jsonl  target_100_total_2500_killed_5.jsonl  target_100_total_500_killed_0.jsonl  target_20_total_100_killed_5.jsonl  target_20_total_2500_killed_0.jsonl  target_20_total_2500_killed_1.jsonl  target_20_total_2500_killed_5.jsonl  target_20_total_500_killed_1.jsonl  target_20_total_500_killed_5.jsonl  target_99999999_total_100_killed_0.jsonl  target_99999999_total_100_killed_1.jsonl  target_99999999_total_2500_killed_0.jsonl  target_99999999_total_2500_killed_1.jsonl  target_99999999_total_2500_killed_5.jsonl  target_99999999_total_500_killed_1.jsonl  target_99999999_total_500_killed_5.jsonl
waitingroom-testing/src/: checks.rs  main.rs  simulation.rs  user.rs
waitingroom-testing/src/simulation/: config.rs  random_providers.rs  results.rs  user.rs
