[workspace]
resolver = "2"
members = [ "kendall-tau", "waitingroom-*"]

[workspace.dependencies]
waitingroom-core = { path = "./waitingroom-core" }
waitingroom-local-queue = { path = "./waitingroom-local-queue" }
waitingroom-basic = { path = "./waitingroom-basic" }
waitingroom-distributed = { path = "./waitingroom-distributed" }
waitingroom-spanning-trees = { path = "./waitingroom-spanning-trees" }
waitingroom-http = { path = "./waitingroom-http" }
kendall-tau = { path = "./kendall-tau" }
rand = "0.8.5"
itertools = "0.12.0"
serde = "1.0.195"
log = "0.4.21"
rand_chacha = "0.3.1"
metrics = "0.23.0"