[package]
name = "waitingroom-distributed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
test-log = "0.2.16"
waitingroom-core = { workspace = true }
waitingroom-local-queue = { workspace = true }
