[package]
name = "waitingroom-http-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.26.0"
reqwest = { version = "0.11.24", features = ["cookies"] }
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
waitingroom-core = { workspace = true }
