[package]
name = "waitingroom-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waitingroom-core = { workspace = true }
waitingroom-basic = { workspace = true }
foundations = { workspace = true }

# TODO: don't use full features
hyper = { version = "1", features = ["full"] }
# TODO: don't use full features
tokio = { version = "1", features = ["full"] }
# TODO: don't use full features
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie", "cookie-signed"] }
serde_json = "1.0.111"
hex = "0.4.3"
