[package]
name = "waitingroom-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waitingroom-core = { workspace = true }
waitingroom-distributed = { workspace = true }

# TODO: don't use full features
hyper = { version = "1", features = ["full"] }
# TODO: don't use full features
tokio = { version = "1", features = ["full"] }
# TODO: don't use full features
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
axum = { version = "0.7.4", features = ["json", "macros"] }
axum-extra = { version = "0.9.2", features = ["cookie", "cookie-signed"] }
serde_json = "1.0.111"
hex = "0.4.3"
log = { workspace = true }
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
env_logger = "0.11.3"
serde = { workspace = true }
file-guard = "0.2.0"
nix = { version = "0.29.0", features = ["process"] }
rand.workspace = true
cached = { version = "0.52.0", features = ["async"] }
