[package]
name = "waitingroom-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waitingroom-distributed = { workspace = true }
waitingroom-core = { workspace = true }
log = { workspace = true }
env_logger = "0.11.3"
