[package]
name = "waitingroom-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
waitingroom-distributed = { path = "../waitingroom-distributed", features = [
    "testing",
] }
waitingroom-core = { workspace = true }
log.workspace = true
env_logger = "0.11.3"
anyhow = "1.0.86"
fern = {version = "0.6.2", features = ["colored"] }
kendall-tau = { workspace = true }
strum = { version = "0.26.2", features = ["derive"] }
rayon = "1.10.0"
serde_json = "1.0.118"
serde = { workspace = true, features = ["derive"] }
